tests/snapshots/examples_fixtures/aoc__2025__aoc_day11_part2.snap
---
source: tests/examples_fixtures_snapshots.rs
---
Fixture: examples/aoc/2025/aoc_day11_part2.flx
== compile ==
failed (compile)
== diagnostics ==
error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_part2.flx:44:13
   |
44 |     let r = put({}, "count", count)
   |             ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_part2.flx:45:5
   |
45 |     put(r, "memo", memo)
   |     ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_part2.flx:49:11
   |
49 |     match get(r, "count") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_part2.flx:56:11
   |
56 |     match get(r, "memo") {
   |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_part2.flx:71:34
   |
71 |     fold(entries, {}, /(g, e) -> put(g, e.0, e.1))
   |                                  ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_part2.flx:102:17
    |
102 |     let memo3 = put(memo2, key, total)
    |                 ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `put`.

  examples/aoc/2025/aoc_day11_part2.flx:107:17
    |
107 |     let memo2 = put(memo, key, 0)
    |                 ^^^

Hint:
  Define it first: let put = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_part2.flx:112:11
    |
112 |     match get(graph, node) {
    |           ^^^

Hint:
  Define it first: let get = ...;


error[E004]: Undefined Variable

I can't find a value named `get`.

  examples/aoc/2025/aoc_day11_part2.flx:127:11
    |
127 |     match get(memo, key) {
    |           ^^^

Hint:
  Define it first: let get = ...;


error[E001]: Duplicate Name

Duplicate binding: `lines` is already defined.

  examples/aoc/2025/aoc_day11_part2.flx:134:1
    |
134 | let lines = to_list(read_lines("examples/aoc/2025/aoc_day11.txt"))
    | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

Hint:
  Use a different name or remove the previous definition.

   = note: first defined here
  examples/aoc/2025/aoc_day11_part2.flx:0:1
  |

Found 10 errors.
== stdout ==
<not executed>
